# python-handbook

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
.kiro/hooks/: docs-mkdocs-build.kiro.hook  python-compile-check.kiro.hook  run-pytest.kiro.hook  run-tests-on-save.kiro.hook
.kiro/steering/: steering.md
docs/: faq.md  index.md  learning-path.md
docs/cheatsheets/: README.md  builtins.md  collections.md  file-io.md  stdlib.md  strings.md  syntax.md
docs/exercises/: 01-introduction.md  02-installation-and-setup.md  03-running-python.md  04-syntax-and-structure.md  05-values-variables-types.md  06-operators-expressions-input.md  07-strings.md  08-control-flow.md  09-collections.md  10-functions.md  11-comprehensions-generators.md  12-errors-exceptions-debugging.md  13-files-paths-json-csv.md  14-modules-packages-imports.md  15-virtual-environments-pip.md  16-oop.md  17-standard-library.md  18-testing-code-quality.md  19-type-hints.md  20-cli-programs.md  21-working-with-data.md  22-practical-projects.md  23-where-to-go-next.md  README.md
docs/handbook/: 01-introduction.md  02-installation-and-setup.md  03-running-python.md  04-syntax-and-structure.md  05-values-variables-types.md  06-operators-expressions-input.md  07-strings.md  08-control-flow.md  09-collections.md  10-functions.md  11-comprehensions-generators.md  12-errors-exceptions-debugging.md  13-files-paths-json-csv.md  14-modules-packages-imports.md  15-virtual-environments-pip.md  16-oop.md  17-standard-library.md  (+7 more)
examples/: README.md
projects/: README.md
tests/: README.md  conftest.py  test_examples.py
(+111 files in other folders)
