[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-handbook"
version = "0.1.0"
description = "A beginner-friendly Python handbook"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "python-handbook contributors", email = "contact@python-handbook.example.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "mkdocs-material>=9.0.0",
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/neikiri/python-handbook"
Documentation = "https://python-handbook.github.io"
Repository = "https://github.com/neikiri/python-handbook.git"
Issues = "https://github.com/neikiri/python-handbook/issues"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"